@@ -1,3 +1,5 @@
+	* API. Трейт \Cetera\Traits\Extendable для классов, которые могут быть расширены в пользовательских темах.
+
 3.58.5
 
 	* Bugfix. https://pm.cetera.ru/browse/CCD-1310
